HELLODATA-2840 - junit5 without public accessors, minor changes